--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Nunito:ital,wght@0,400;0,500;0,700;1,400&display=swap');
 *{
      margin: 0;
      padding: 0;
      box-sizing: border-box;
+}
+body{
+	background: #f1f1f1;
+}
+.nav-link, .dropdown-item{
+	font-weight: bold;
+}
+
+@media screen and (min-width:992px) {
+	.navbar{
+		height: 100vh;
+		align-items: flex-start;
+		.container-fluid{
+			flex-direction: column;
+			align-items: flex-start;
+		}
+	}
+	.navbar-expand-lg{
+		.navbar-collapse{
+			flex-direction: column;
+		}
+		.navbar-nav{
+			align-items: flex-start !important;
+			flex-direction: column;
+			.dropdown-menu.show{
+				position: static;
+				background-color: #f1f1f1;
+				margin-left: 2rem;
+				border: none;
+			}
+		}
+	}
+	.navbar-brand{
+		font-weight: bold;
+		letter-spacing: 5px;
+		margin-left: .5rem;
+		font-size: 1.7rem;
+		font-family: "Montserrat";
+	}
+}
+.gap{
+	margin: 50px 0;
+
+	&-small{
+		margin: 25px 0;
+	}
 }
