--- a/scss/style.css
+++ b/scss/style.css
@@ -18,6 +18,99 @@ body {
   font-weight: 400;
 }
 
+.gap {
+  margin: 50px 0;
+}
+
+.gap-small {
+  margin: 25px 0;
+}
+
+.title {
+  padding: 20px 0;
+}
+
+.right {
+  font-size: 25px;
+}
+
+.right .icon {
+  margin: 0 10px;
+}
+
+.box1 {
+  width: 100%;
+}
+
+.box1 img {
+  width: 100%;
+}
+
+.box1 .box1-body {
+  top: 0px;
+  left: 0px;
+  padding: 25px 36px;
+  width: 100%;
+  height: 100%;
+}
+
+.btn-black {
+  background: black;
+  color: white;
+}
+
+.btn-black:hover {
+  background: #dbdbdb;
+  color: black;
+}
+
+.badge-black {
+  background: black;
+  color: white;
+}
+
+.box-2 img {
+  width: 100%;
+  max-width: 600px;
+  margin: 10px 0;
+  -webkit-filter: grayscale(50%);
+          filter: grayscale(50%);
+}
+
+.box-2:hover .hoverBox {
+  display: block;
+}
+
+.no-gap {
+  margin-top: -5px;
+}
+
+.text-orangered {
+  color: #f44336;
+}
+
+.bg-orangered {
+  background: #f44336;
+}
+
+.grayscale-50 {
+  -webkit-filter: grayscale(50%);
+          filter: grayscale(50%);
+}
+
+.pos-badge {
+  top: 7px;
+  z-index: 9999;
+}
+
+.hoverBox {
+  display: none;
+  z-index: 99999;
+  position: absolute;
+  left: 25%;
+  bottom: 55%;
+}
+
 @media screen and (min-width: 992px) {
   .navbar {
     width: 100% !important;
@@ -72,74 +165,38 @@ body {
   }
 }
 
-.gap {
-  margin: 50px 0;
+@media screen and (max-width: 1024px) {
+  .hoverBox {
+    left: 15%;
+  }
 }
 
-.gap-small {
-  margin: 25px 0;
+@media screen and (max-width: 992px) {
+  .hoverBox {
+    left: 30%;
+    bottom: 50%;
+  }
 }
 
-.title {
-  padding: 20px 0;
+@media screen and (max-width: 425px) {
+  .hoverBox {
+    left: 15%;
+    bottom: 55%;
+  }
 }
 
-.right {
-  font-size: 25px;
+@media screen and (max-width: 375px) {
+  .hoverBox {
+    left: 8%;
+  }
 }
 
-.right .icon {
-  margin: 0 10px;
-}
-
-.box1 {
-  width: 100%;
-}
-
-.box1 img {
-  width: 100%;
-}
-
-.box1 .box1-body {
-  top: 0px;
-  left: 0px;
-  padding: 25px 36px;
-  width: 100%;
-  height: 100%;
-}
-
-.btn-black {
-  background: black;
-  color: white;
-}
-
-.btn-black:hover {
-  background: #dbdbdb;
-  color: black;
-}
-
-.box-2 img {
-  width: 100%;
-  max-width: 600px;
-  margin: 10px 0;
-  -webkit-filter: grayscale(50%);
-          filter: grayscale(50%);
-}
-
-.no-gap {
-  margin-top: -5px;
-}
-
-.text-orangered {
-  color: #f44336;
-}
-
-.bg-orangered {
-  background: #f44336;
-}
-
-.grayscale-50 {
-  -webkit-filter: grayscale(50%);
-          filter: grayscale(50%);
+@media screen and (max-width: 320px) {
+  .hoverBox {
+    bottom: 60%;
+  }
+  .hoverBox a {
+    font-size: 12px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
