--- a/scss/style.scss
+++ b/scss/style.scss
@@ -58,7 +58,7 @@ body{
 		width: 100%;
 		max-width: 600px;
 		margin: 10px 0;
-		filter: grayscale(50%);
+		filter: grayscale(75%);
 	}
 	&:hover{
 		.hoverBox{
@@ -77,7 +77,7 @@ body{
 	background: #f44336;
 }
 .grayscale-50{
-	filter: grayscale(50%);
+	filter: grayscale(64%);
 }
 .pos-badge{
 	top: 7px;
@@ -160,5 +160,58 @@ body{
 		a{
 			font-size: 12px;
 		}
+	}
+}
+.subscribe-box{
+	background: black;
+	padding: 25px;
+}
+.btn-orangered{
+	background: #f44336;
+	color: white;
+	margin: 10px 0;
+	&:hover{
+		background-color: #dbdbdb;
+		color: black;
+	}
+}
+.site-footer{
+	background: #dbdbdb;
+	padding: 16px;
+}
+.copyright{
+	background: black;
+	padding: 16px;
+}
+.frm{
+	input{
+		margin: 10px 0;
+	}
+	button{
+		width: 100%;
+	}
+}
+.link-black{
+	color: black;
+	font-weight: lighter;
+	font-size: 13px;
+	margin: -1px;
+}
+.lst{
+	&-info{
+		margin: 15px 0;
+		padding: 0 !important;
+		list-style: none;
+	}
+	&-payment{
+		margin: 15px 0;
+		padding: 0 !important;
+		list-style: none;
+	}
+}
+.sm{
+	a{
+		color: black;
+		font-size: 20px;
 	}
 }
