--- a/scss/style.scss
+++ b/scss/style.scss
@@ -116,7 +116,7 @@ body{
 				margin-left: 2rem;
 				border: none;
 			}
-			.nav-link,.dropdown-item{
+			.nav-link,.btn-modal,.dropdown-item{
 				&:hover{
 					color: black;
 					background: #dbdbdb;
