--- a/scss/style.css
+++ b/scss/style.css
@@ -152,7 +152,7 @@ body {
     margin-left: 2rem;
     border: none;
   }
-  .navbar-expand-lg .navbar-nav .nav-link:hover, .navbar-expand-lg .navbar-nav .dropdown-item:hover {
+  .navbar-expand-lg .navbar-nav .nav-link:hover, .navbar-expand-lg .navbar-nav .btn-modal:hover, .navbar-expand-lg .navbar-nav .dropdown-item:hover {
     color: black;
     background: #dbdbdb;
   }
